2006-10-08  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/channel-list.c:
	* src/fe-gnome/channel-list.h:
	  - Clean up some dead stuff.

2006-10-07  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/navigation-tree.c:
	  - Remove the default "<none>" session in the tree view, since it's
	    not really needed anymore and was breaking things.

2006-10-07  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/preferences-page-plugins.c:
	  - Fix a typo. "occurred" instead of "occured".
	    (Launchpad: #64479)

2006-10-04  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Add checks in navigation_model_get_server to try to prevent
	  crashes (#359761).

2006-10-02  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Use a column enum to make things more maintainable.

2006-10-02  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/connect-dialog.c:
	  - Fix accelerator collision. (Launchpad: #63378)

2006-09-25  David Trowbridge  <trowbrds@gmail.com>

	* data/channel-list.glade:
	  - Snazzy new layout for filtering options.

2006-09-24  David Trowbridge  <trowbrds@gmail.com>

	* po/cs.po:
	  - Update from rosetta trunk

2006-09-24  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	  - Fix capitalization in usage

2006-09-23  David Trowbridge  <trowbrds@gmail.com>

	* src/common/dbus/Makefile.am:
	* po/POTFILES.in:
	  - More distcheck fixes.

2006-09-23  David Trowbridge <trowbrds@gmail.com>

	* plugins/perl/generate_header:
	  - Fix this to actually use the command-line arguments that it used
	    to take, so that builds work when builddir != srcdir.

2006-09-23  David Trowbridge <trowbrds@gmail.com>

	* plugins/python/python.c:
	A plugins/python/CVS:
	A plugins/python/CVS/Repository:
	A plugins/python/CVS/Root:
	A plugins/python/CVS/Entries:
	* plugins/perl/Xchat.pm:
	* plugins/perl/CVS/Entries:
	* src/common/dbus: